# oware

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  railway.json
artifacts/: elo.json
artifacts/az/: best.pt  latest.pt
artifacts/dqn/: latest.pt
artifacts/ppo/: best.pt  latest.pt
docs/: ARCHITECTURE.md  CLEAN_CODE.md  GAME_SPEC.md  PLAN.md  RL_APPROACHES.md  ROADMAP.md  TELEMETRY.md  TEST_PLAN.md  TRAINING.md  WS_PROTOCOL.md
scripts/: eval_ppo.py  tournament.py
src/oware/agents/: __init__.py  base.py  minimax.py  random_agent.py  registry.py
src/oware/engine/: __init__.py  _core.py
src/oware/server/: __main__.py  app.py  protocol.py  sessions.py  telemetry.py
src/oware/training/: logging.py
tests/agents/: test_az.py  test_dqn_agent.py  test_dqn_env.py  test_dqn_model.py  test_minimax.py  test_ppo.py
tests/engine/: conftest.py  test_captures.py  test_encoding.py  test_properties.py  test_worked_examples.py
tests/server/: test_play.py
web/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: AgentInsight.tsx  AgentPicker.tsx  AnalysisPane.tsx  Board.tsx  BoardView.tsx  Footer.tsx  MuteToggle.tsx  PageHeader.tsx  RulesTab.tsx  ScopeToggle.tsx  Seeds.tsx  Sidebar.tsx
web/src/hooks/: useBoardAnimation.ts  useGame.ts  useHashRoute.ts  useReplay.ts  useReplayAnimation.ts  useTheme.ts
web/src/lib/: api.ts  audio.ts  games.ts  pit.ts  protocol.ts
web/src/pages/: GamesPage.tsx  LeaderboardPage.tsx  MatchPage.tsx  (+3 more)
(+15 files in other folders)
