[project]
name = "oware"
version = "0.1.0"
description = "Oware Mancala — engine, agents, and web server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gymnasium>=1.0",
    "torch>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "httpx>=0.28.1",
    "tensorboard>=2.0",
    "tqdm>=4.0",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oware"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["src/oware/engine"]

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]
ignore = ["B011", "E402"]
